upgrade dependencies. compiles